# SOAPBlueprint

./: README.md  pyproject.toml
app/: streamlit_app.py
core/: builder.py  models.py  parser.py  validators.py
tests/: test_builder.py  test_parser.py
