[tool.poetry]
name = "wsdlgen"
version = "0.1.0"
description = "WSDL generator for SAP Integration Suite"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
lxml = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
